--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,65 +1,64 @@
-/* everything */
 * {
-    margin: 32px;
-    box-sizing: border-box;
-    text-align:center;
+  margin: 32px;
+  box-sizing: border-box;
+  text-align: center;
 }
 
-/* html elements */
-body{
-    background:#e6ecf0;
-    font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
-    
+body {
+  background: #e6ecf0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-h1{
-    color:white;
-    font-size:6em;
+h1 {
+  color: white;
+  font-size: 6em;
 }
-p{
-    line-height:1.6em;
-    font-size:1em
+p {
+  line-height: 1.6em;
+  font-size: 1em;
 }
-button{
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px
+button {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
-form{
-    display:inline;
+form {
+  display: inline;
 }
 
-/* classes */
-.container{
-    padding:0.5em 16px;
+.container {
+  padding: 0.5em 16px;
 }
-.thick-container{
-    padding:64px 80px;
-}
-
-
-/* ids */
-#navbar{
-    width: 100%;
-    height: 100%;
-    background:#6ea5ca;
-    padding: 1em;
-}
-#wrapper{
-    font-size: 2em;
-    font-weight: 600;
-    padding:64px 128px;
-    padding-top:0;
-}
-#player_answer{
-    padding: 16px;
-    width: 64px;
-    height: 64px;
-    color: blue;
-    font-size: 40px;
+.thick-container {
+  padding: 64px 80px;
 }
 
+#navbar {
+  width: 100%;
+  height: 100%;
+  background: #6ea5ca;
+  padding: 1em;
+}
+#wrapper {
+  font-size: 2em;
+  font-weight: 600;
+  padding: 64px 128px;
+  padding-top: 0;
+}
+#player_answer {
+  width: 80px;
+  height: 64px;
+  color: blue;
+  font-size: 40px;
+}
+#answer {
+  width: 4rem;
+}
+
+button {
+  background-color: #6ea5ca;
+}
