--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 32px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   text-align: center;
 }
 
@@ -8,58 +9,47 @@ body {
   background: #e6ecf0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 h1 {
   color: white;
-  font-size: 6em;
-}
-p {
-  line-height: 1.6em;
-  font-size: 1em;
-}
-button {
-  background-color: #4caf50; /* Green */
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-form {
-  display: inline;
-}
-
-.container {
-  padding: 0.5em 16px;
-}
-.thick-container {
-  padding: 64px 80px;
-}
-
-#navbar {
+  font-size: 64px;
+  letter-spacing: 6px;
   width: 100%;
   height: 100%;
   background: #6ea5ca;
   padding: 1em;
 }
+
+p {
+  line-height: 1.6em;
+  font-size: 1em;
+}
+
+button {
+  color: white;
+  padding: 16px 32px;
+  font-size: 24px;
+  background-color: #6ea5ca;
+}
+
+form {
+  display: inline;
+}
+
 #wrapper {
   font-size: 2em;
   font-weight: 600;
   padding: 64px 128px;
   padding-top: 0;
 }
+
 #player_answer {
-  width: 80px;
+  width: 120px;
   height: 64px;
   color: blue;
   font-size: 40px;
 }
+
 #answer {
-  width: 4rem;
+  width: 200px;
 }
-
-button {
-  background-color: #6ea5ca;
-}
-
